--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
-    <title>/hello</title>
+    <title>hello</title>
 </head>
 <body>
 
